# pytranslate

./: README.md  pyproject.toml
pytranslate/: clean.py  constants.py  encode.py  explode.py  get_args.py  get_definition.py  join.py  main.py  mkdir.py  normalize.py  read_file.py  strip.py  to_prompt.py  translate.py  translate_file.py  translate_line.py  writelines.py
